[package]
name = "kabletop-godot-sdk"
version = "0.1.0"
authors = ["liyukun <liyukun@cryptape.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.0"
kabletop-godot-util = { path = "kabletop-godot-util" }

[lib]
crate-type = ["cdylib"]