[package]
name = "kabletop-godot"
version = "0.1.0"
authors = ["liyukun <liyukun@cryptape.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.0"
kabletop-godot-sdk = { path = "kabletop-godot-sdk" }
lazy_static = "1.4.0"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]