[package]
name = "kabletop-godot-sdk"
version = "0.1.0"
authors = ["vimchain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.0"
# kabletop-ckb-sdk = { git = "https://github.com/ashuralyk/kabletop-ckb-sdk" }
kabletop-ckb-sdk = { path = "../../kabletop-ckb-sdk" }
futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ckb-crypto = "0.40.0"
ckb-types = "0.40.0"
ckb-jsonrpc-types = "0.40.0"
lazy_static = "1.4.0"
hex = "0.4.3"
molecule = "0.7.0"

[build-dependencies]
cc = "1.0.69"
